--- a/package.json
+++ b/package.json
@@ -6,8 +6,20 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.6",
+        "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@googlemaps/js-api-loader": "^1.16.2",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap-icons": "^1.11.1",
+        "firebase": "^10.6.0",
+        "typed.js": "^2.1.0"
     }
 }
