--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "dependencies": {
         "@googlemaps/js-api-loader": "^1.16.2",
         "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.11.1",
         "firebase": "^10.6.0",
+        "jquery": "^3.7.1",
+        "slick-carousel": "^1.8.1",
         "typed.js": "^2.1.0"
     }
 }
